--- a/Components/Layout/DashboardToolbar.razor
+++ b/Components/Layout/DashboardToolbar.razor
@@ -1,4 +1,4 @@
-<!--/* In the name of God, the Merciful, the Compassionate */-->`r`n@using System.IO
+<!--/* In the name of God, the Merciful, the Compassionate */-->@using System.IO
 @using SqlHealthAssessment.Data
 @using SqlHealthAssessment.Data.Models
 @inject IDbConnectionFactory ConnectionFactory
