--- a/Components/Shared/StatCard.razor
+++ b/Components/Shared/StatCard.razor
@@ -1,4 +1,4 @@
-<!--/* In the name of God, the Merciful, the Compassionate */-->`r`n@using SqlHealthAssessment.Data
+<!--/* In the name of God, the Merciful, the Compassionate */-->@using SqlHealthAssessment.Data
 
 <div class="stat-card @(!string.IsNullOrEmpty(Description) ? "has-tooltip" : "")"
      style="background-color: @(ResolvedColor + "22"); border-left: 3px solid @ResolvedColor;"
